dialogs for both types of chapter cards
