# backend/src/main/java/org/borg/backend/chapter/dto/ChapterRequest.java
@@ -1,0 +1,13 @@
+package org.borg.backend.chapter.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@AllArgsConstructor
+public class ChapterRequest {
+    private Long storyId;
+    private Long chapterId;
+}
